# Raccoon

./: .gitmodules  CMakeLists.txt  README.md  build_MinGW_debug.bat  build_MinGW_minsize_debug.bat  build_MinGW_release.bat  build_Template_WindowsRelease.bat  build_game.bat  installer_script.nsi  x64_build_VS2022_debug.bat  x64_build_VS2022_release.bat
Logos/: icon.rc
Raccoon/: CMakeLists.txt
Raccoon/src/: Application.cpp  Application.h  Assert.h  EntryPoint.h  Logger.cpp  Logger.h  Raccoon.h
Raccoon/src/Raccoon/: pch.h
Raccoon/src/Raccoon/Core/: Application.cpp  Application.h  Assert.h  Base.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  MouseCodes.h  PlatformDetection.h  TimeStep.h  Window.cpp  Window.h
Raccoon/src/Raccoon/Debug/: Timer.h
Raccoon/src/Raccoon/Events/: Event.h  EventQueue.cpp  EventQueue.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
Raccoon/src/Raccoon/FileSystem/: Directory.h  File.cpp  File.h  FilePath.cpp  FilePath.h  FileSystem.cpp  FileSystem.h
Raccoon/src/Raccoon/ImGui/: Fonts.cpp  Fonts.h  Guizmo.cpp  Guizmo.h  ImGuiLayer.cpp  ImGuiLayer.h
Raccoon/src/Raccoon/ImGui/fonts/: IconFont.h  OpenSans-Bold.h  OpenSans-Regular.h
Raccoon/src/Raccoon/Math/: Math.cpp  Math.h  Ortho.h  Random.cpp  Random.h
Raccoon/src/Raccoon/Project/: Project.cpp  Project.h  ProjectSerializer.cpp  ProjectSerializer.h
Raccoon/src/Raccoon/Renderer/: BufferLayout.h  Camera2DController.cpp  Camera2DController.h  CameraControllers.h  Cameras.cpp  Cameras.h  Color.cpp  Color.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  ParticleSystem.cpp  ParticleSystem.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  RendererCommand.cpp  RendererCommand.h  RendererContext.cpp  RendererContext.h  ShaderLibrary.cpp  ShaderLibrary.h  Shaders.cpp  Shaders.h  ShadersSources.h  Sprite.cpp  Sprite.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  (+1 more)
Raccoon/src/Raccoon/Scene/: Components.cpp  Components.h  Entity.cpp  Entity.h  Registry.cpp  Registry.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Raccoon/src/Raccoon/Utils/: PlatformUtils.h
RaccoonEditor/: CMakeLists.txt
RaccoonEditor/assets/shaders/: ColoredRectangle.fs  ColoredRectangle.vs  TexturedRectangle.fs  TexturedRectangle.vs
RaccoonEditor/src/: EditorApplication.cpp  EditorLayer.cpp  EditorLayer.h  ProjectManagerLayer.cpp  ProjectManagerLayer.h
RaccoonEditor/src/Panels/: ContentBrowser.cpp  ContentBrowser.h  HierarchyPanel.cpp  HierarchyPanel.h
Sandbox/: CMakeLists.txt
Sandbox/src/: GameLayer.h  SandboxApp.cpp  SandboxApplication.cpp  TestLayer.cpp  TestLayer.h
Templates/: CMakeLists.txt
Templates/src/: Application.cpp  WindowsLayer.cpp  WindowsLayer.h
